Fixed layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -11715,7 +11715,7 @@ h5,
 }
 .project-wrap .img {
   display: block;
-  width: 300px;
+  width: 400px;
   height: 300px;
   position: relative;
   z-index: 0;
